<resources>
    <string name="app_name">Bill Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="snackbar_bill_paid">%s marked as paid!</string>
    <string name="undo">Undo</string>
    <string name="view_bill_error_loading">Error loading bill!</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="repeating">Repeating</string>
    <string name="due_date">Due Date</string>
    <string name="tap_to_select_due_date">Tap To Select Due Date</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="due_in">Due In</string>
    <string name="days">Days</string>
    <string name="notification_due">"Due %s"</string>
    <string name="notification_summary_title">Upcoming Bills!</string>
    <string name="notification_action_paid">Paid</string>
    <string name="tap_to_add_bill">Tap to add bill</string>
    <string name="no_bills_tap_to_add">No Bills Added Yet!\nTap here or the plus to add a bill!</string>
    <string name="delete_bill">Delete Bill</string>
    <string name="confirm_delete">Confirm Deletion</string>
    <string name="deletion_message">"Are you sure you want to delete %s?"</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="repeating_item_never">Never</string>
    <string name="repeating_item_daily">Daily</string>
    <string name="repeating_item_weekly">Weekly</string>
    <string name="repeating_item_monthly">Monthly</string>
    <string name="repeating_item_bi_yearly">Bi-Yearly</string>
    <string name="repeating_item_yearly">Yearly</string>
    <string name="pay">Pay</string>
    <string name="url_to_pay_bill">URL To Pay Bill</string>
    <string name="title_activity_settings">Settings</string>
    <string name="due">Due</string>
    <string name="days_ago">Days Ago</string>
    <string name="day_ago">Day Ago</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_bill_peek">Bill Peek</string>


    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="notifications">Notifications</string>
    <string name="led">LED</string>
    <string name="repeats_view_bill">Repeats %s</string>
    <string name="next_due_date_view_bill">Next Due Date: %s</string>
    <string name="title_activity_jmain">JMainActivity</string>
    <string name="title_activity_jsettings">Settings</string>

    <string name="banner_ad_unit_id">ca-app-pub-1464692828868203/2490671795</string>
    <string name="day">Day</string>
    <string name="internal_preference_file_key">internal_settings</string>
    <string name="user_token">user_token</string>
    <string name="amount">Amount</string>
    <string name="bill_peek_upcoming">"Total due in next %1$d days: %2$s</string>
    <string name="bill_peek">Bill Peek</string>
    <string name="bill_peek_summ">Show a preview of your upcoming total balance due.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="facebook_app_id">316563612047695</string>


</resources>
